--- a/client/entry/package.json
+++ b/client/entry/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
-    "node-int64": "^0.4.0",
-    "thrift": "^0.16.0"
+    "node-int64": "^0.4.0"
   }
 }
